--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,15 +13,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby-version: ['3.2', '3.3', 'jruby-9.4']
+        ruby-version: ['3.1', '3.2', '3.3']
         rspec-version: ['3.10', '3.13', '']
-        exclude:
-          - ruby-version: 'jruby-9.4'
-            rspec-version: '3.10'
-        include:
-          - ruby-version: 'jruby-9.4'
-            allow-failure: true
-
     steps:
       - uses: actions/checkout@v4
 
