--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,8 +13,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby-version: ['3.1', '3.2', '3.3']
-        rspec-version: ['3.10', '3.13', '']
+        ruby-version: ['2.6', '3.1', '3.2', '3.3', '3.4', '4.0.0-preview3']
+        rspec-version: ['3.8.0', '']
     steps:
       - uses: actions/checkout@v4
 
