--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby-version: ['2.6', '3.1', '3.2', '3.3', '3.4', '4.0.0-preview3']
+        ruby-version: ['2.6', '3.1', '3.2', '3.3', '3.4', '4.0']
         rspec-version: ['3.8.0', '']
     steps:
       - uses: actions/checkout@v4
